# IVS-Projekt-3

./: .gitignore  CMakeLists.txt  Doxyfile  README.txt  gen  run.sh  test.sh
cmake/: FindGTK3.cmake
src/: CMakeLists.txt
src/ml_calc/: CMakeLists.txt  calc.glade  main.c  main.h  operations.c  operations.h  shared.h
src/ml_math/: CMakeLists.txt  ml_math.c  ml_math.h
src/ml_math_tests/: CMakeLists.txt  ml_math_test.c  ml_math_test.h
